--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,10 @@
 			<version>1.0</version>
 	    </dependency>
 	
-	
+		  <dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+	    </dependency>
 	
 	
 	</dependencies>
